# multi-factory

./: README.md  pyproject.toml
src/multi_factories/: __init__.py
src/multi_factory/: __init__.py  base.py  json_to_domain.py  types.py  utils.py
tests/: common.py  conftest.py  test_factory.py  test_json_to_domain_factory.py  test_multi_factories.py  test_multi_factory.py
